[package]
name = "world-wiki"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
colored = "2.1.0"
operational-transform = "0.6.1"
pulldown-cmark = "0.11.0"
surrealdb = "1.5.4"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
